--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <title>First assiemnt</title>
 </head>
 <body>
 
+    <section id="muhnd" class="layout">
+        <p>This section is written by Muhnd</p>
+    </section>
     
     
 </body>
