Adding abdelhamid section.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <section id="muhnd" class="layout">
         <p>This section is written by Muhnd</p>
     </section>
+
+    <section id="abdelhamid" class="layout">
+        <p>This section is written by Abdelhamid</p>
+    </section>
     
     
 </body>
