--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <p>This section is written by Muhnd</p>
     </section>
 <section id="shehab" class="layout"> <p>This section is written by shehab</p> </section>
+
+
+   <!-- abdlera7man -->
+   <section class="layout background">
+    <h4>The journey of a thousand miles begins with one step </h4> 
+   </section>
     
     
 </body>
