--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oxygen:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>First assiemnt</title>
 </head>
-<body>
 
+<body>
+    <!-- muhnd -->
     <section id="muhnd" class="layout">
         <p>This section is written by Muhnd</p>
     </section>
-<<<<<<< HEAD
 
+    <!-- abdelhamid -->
     <section id="abdelhamid" class="layout">
         <p>This section is written by Abdelhamid</p>
     </section>
-||||||| 85cb61c
-=======
-<section id="shehab" class="layout"> <p>This section is written by shehab</p> </section>
+
+    <!-- shehab -->
+    <section id="shehab" class="layout">
+        <p>This section is written by shehab</p>
+    </section>
+
+    <section class="layout background">
+        <h4>The journey of a thousand miles begins with one step </h4>
+    </section>
 
 
-   <!-- abdlera7man -->
-   <section class="layout background">
-    <h4>The journey of a thousand miles begins with one step </h4> 
-   </section>
->>>>>>> 57866e1e1cba5e6d317f760b36e20f7647f12137
-    
-    
 </body>
+
 </html>
