edite in assignment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+
+
+    <!--mah,oud elhamrawi  -->
+    <section id="elhamrawi">
+        <p>this section written by mahmoud</p>
+    </section>
+
     <!-- muhnd -->
     <section id="muhnd" class="layout">
         <p>This section is written by Muhnd</p>
