--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <section class="layout background">
         <h4>The journey of a thousand miles begins with one step </h4>
     </section>
-
+    <!-- M.salah -->
+    <section id="salah" class="layout">
+        <p>This section is written by M.salah</p>
+    </section>
 
 </body>
 
