--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <p>This section is written by shehab</p>
     </section>
 
+    <!-- abdelrhaman -->
     <section class="layout background">
         <h4>The journey of a thousand miles begins with one step </h4>
     </section>
+    
     <!-- M.salah -->
     <section id="salah" class="layout">
         <p>This section is written by M.salah</p>
